
4.10  2013-06-01

4.09  2013-05-31
  - Updated jQuery to version 2.0.2.
  - Increased default max_message_size from 5MB to 10MB in Mojo::Message.

4.08  2013-05-30
  - Improved Mojo::Message::Request to allow curly brackets in URLs.
  - Improved HMAC-SHA1 performance in Mojo::Util.

4.07  2013-05-26
  - Updated jQuery to version 2.0.1.
  - Fixed format handling in routes command.

4.06  2013-05-25
  - Fixed Windows bug in "log.t".

4.05  2013-05-24
  - Fixed encoding bug in Mojo::Log.

4.04  2013-05-23
  - Added WebSocket subprotocol support to Mojo::UserAgent::Transactor.

4.03  2013-05-21
  - Fixed redirect support in get command.

4.02  2013-05-20
  - Fixed extends, layout and title helpers not to generate unnecessary log
    messages.

4.01  2013-05-19
  - Fixed small drain event bug in Mojo::IOLoop::Stream. (ChinaXing)

4.0  2013-05-15
  - Code name "Top Hat", this is a major release.
  - Added simple JSON serialization and deserialization support to
    Mojo::Transaction::WebSocket.
  - Added json event to Mojo::Transaction::WebSocket.
  - Added render_maybe method to Mojolicious::Controller.
  - Added again method to Mojo::Reactor, Mojo::Reactor::Poll and
    Mojo::Reactor::EV.
  - Added is_empty method to Mojo::Transaction::HTTP.
  - Added close_gracefully method to Mojo::IOLoop::Stream.
  - Changed Mojolicious default secret to the application moniker to make it
    slightly more secure.
  - Changed types in Mojolicious::Types to consistently use arrays.
  - Changed heuristics for number detection in Mojo::JSON to better line up
    with user expectations.
  - Changed render and render_static methods in Mojolicious::Controller to
    call render_not_found if no response could be generated.
  - Removed callback support from body method in Mojo::Message.
  - Removed Mojolicious::Plugin::PoweredBy and
    Mojolicious::Plugin::RequestTimer.
  - Removed pair_separator attribute from Mojolicious::Parameters.
  - Removed data attribute from Mojo::URL.