@@ -1,5 +1,6 @@
 
 4.10  2013-06-01
+  - Added link method to Mojo::Headers.
 
 4.09  2013-05-31
   - Updated jQuery to version 2.0.2.
